syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/uwemakan/simplebank/pb";

message LoginUserRequest {
  string username = 1 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 100
  ];
  string password = 2 [
    (buf.validate.field).string.min_len = 6,
    (buf.validate.field).string.max_len = 100
  ];
}

message LoginUserResponse {
  string sessionId = 1;
	string accessToken = 2;
	google.protobuf.Timestamp accessTokenExpiresAt = 3;
	string refreshToken = 4;
	google.protobuf.Timestamp refreshTokenExpiresAt = 5;
  User user = 6;
}